--- a/src/app/pages/event-view/event-view.component.html
+++ b/src/app/pages/event-view/event-view.component.html
@@ -1,12 +1,5 @@
 @if (event$ | async; as event) {
-
-<header>
-  <section
-    class="bg-gradient-mask bg-gray-700 bg-[url('https://contents.mediadecathlon.com/p1972651/k$89ea178d1bccbb79521233a6c58dd8f3/1800x0/2226pt1840/3663xcr2664/Les-r%25C3%25A8gles-du-beachvolley.jpg?format=auto')] bg-center bg-no-repeat bg-blend-multiply">
-    <app-navbar></app-navbar>
-    <div class="mx-auto max-w-screen-xl px-4 py-10 text-center md:py-14 lg:py-20"></div>
-  </section>
-</header>
+<app-header></app-header>
 
 <div class="mx-auto max-w-7xl px-4 py-8 sm:px-6 lg:px-8">
   <div class="flex flex-col items-center justify-between space-y-4 lg:flex-row lg:space-y-0">
