--- a/src/app/pages/event-view/event-view.component.html
+++ b/src/app/pages/event-view/event-view.component.html
@@ -1,4 +1,4 @@
-@if (event$ | async; as event) {
+{{event$ | async | json}} @if (event$ | async; as event) {
 <app-header></app-header>
 
 <div class="mx-auto max-w-7xl px-4 py-8 sm:px-6 lg:px-8">
@@ -56,7 +56,7 @@
     <div>
       <div class="rounded-lg bg-white p-6 shadow-md">
         <h2 class="mb-4 text-2xl font-semibold text-gray-800">Attendees</h2>
-        <p class="text-gray-600">{{ event?.going }} out of {{ event?.totalSpots }} spots taken</p>
+        <p class="text-gray-600">{{ eventAttendees$ | async }} out of {{ event?.totalSpots }} spots taken</p>
         <div class="mt-4 flex -space-x-2 overflow-hidden">
           <img class="inline-block h-10 w-10 rounded-full ring-2 ring-white" src="https://via.placeholder.com/40" alt="Attendee 1" />
           <img class="inline-block h-10 w-10 rounded-full ring-2 ring-white" src="https://via.placeholder.com/40" alt="Attendee 2" />
