redirect join event to login if user is not logged in

--- a/src/app/pages/event-view/event-view.component.html
+++ b/src/app/pages/event-view/event-view.component.html
@@ -1,4 +1,4 @@
-{{event$ | async | json}} @if (event$ | async; as event) {
+@if (event$ | async; as event) {
 <app-header></app-header>
 
 <div class="mx-auto max-w-7xl px-4 py-8 sm:px-6 lg:px-8">
