fix navbar mobile

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -61,7 +61,7 @@
             }
           </div>
 
-          <div class="flex items-start">
+          <!-- <div class="flex items-start">
             <div class="flex h-5 items-center">
               <input
                 id="terms"
@@ -70,13 +70,13 @@
                 type="checkbox"
                 required />
             </div>
-            <!-- <div class="ml-3 text-sm">
+            <div class="ml-3 text-sm">
               <label class="font-light text-gray-500 dark:text-gray-300" for="terms">
                 I accept the
                 <a class="text-primary-600 dark:text-primary-500 font-medium hover:underline" href="#">Terms and Conditions</a>
               </label>
-            </div> -->
-          </div>
+            </div>
+          </div> -->
 
           <button [disabled]="registerForm.invalid" class="matchup-button w-full" type="submit">Create an account</button>
 
