--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,8 +1,7 @@
-<section class="bg-gray-50 dark:bg-gray-900">
-  <div class="mx-auto flex flex-col items-center justify-center px-6 py-8 md:h-screen lg:py-0">
+<section class="bg-gray-900">
+  <div class="mx-auto flex h-screen flex-col items-center justify-center px-6 py-8 lg:py-0">
     <a class="mb-6 flex items-center text-2xl font-semibold text-gray-900 dark:text-white" href="#">
-      <img class="mr-2 h-8 w-8" src="https://via.placeholder.com/150" alt="logo" />
-      Match UP
+      <img class="sm:h-18 h-16 w-auto md:h-20 lg:h-28" src="assets/images/logo-matchup.png" alt="MatchUp Logo" />
     </a>
     <div class="w-full rounded-lg bg-white shadow sm:max-w-md md:mt-0 xl:p-0 dark:border dark:border-gray-700 dark:bg-gray-800">
       <div class="space-y-4 p-6 sm:p-8 md:space-y-6">
