--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -21,7 +21,7 @@
     </div>
 
     @if (selectedTab === 'going') {
-    <div class="mt-4 grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-4">
+    <div class="grid grid-cols-1 gap-6 pb-10 pt-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4">
       @for (event of (userEvents$ | async); track $index) {
       <a [routerLink]="['/event', event.id]" class="">
         <app-event-card [event]="event"></app-event-card>
@@ -29,7 +29,7 @@
       }
     </div>
     } @if (selectedTab === 'hosting') {
-    <div class="mt-4 grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-4">
+    <div class="grid grid-cols-1 gap-6 pb-10 pt-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4">
       @for (event of (myEvents$ | async); track $index) {
       <a [routerLink]="['/event', event.id]" class="">
         <app-event-card [event]="event"></app-event-card>
