--- a/src/app/pages/event-editor/event-editor.component.html
+++ b/src/app/pages/event-editor/event-editor.component.html
@@ -14,8 +14,19 @@
     </div>
 
     <div class="flex flex-col">
-      <label class="text-sm font-medium text-gray-700" for="image">Image URL</label>
-      <input id="image" class="matchup-input" type="text" formControlName="image" placeholder="Image URL" />
+      <label class="text-sm font-medium text-gray-700">Event Image</label>
+      <ngx-dropzone
+        [maxFileSize]="5000000"
+        (change)="onFileSelect($event)"
+        class="mt-2 rounded-md border-2 border-dashed border-gray-300 p-4"
+        accept="image/*"
+        multiple="false"
+        style="height: 200px; overflow: hidden">
+        <ngx-dropzone-label> Drag and drop an image here or click to upload </ngx-dropzone-label>
+        @if (filePreview) {
+        <img [src]="filePreview" class="h-full w-full rounded-md object-cover" />
+        }
+      </ngx-dropzone>
     </div>
 
     <div class="flex flex-col">
