--- a/src/app/pages/event-editor/event-editor.component.html
+++ b/src/app/pages/event-editor/event-editor.component.html
@@ -22,16 +22,11 @@
         accept="image/*"
         multiple="false"
         style="height: 200px; overflow: hidden">
-        <!-- Show drag and drop label if no preview -->
         @if (!filePreview) {
         <ngx-dropzone-label> Drag and drop an image here or click to upload </ngx-dropzone-label>
-        }
-
-        <!-- Image Preview -->
-        @if (filePreview) {
+        } @if (filePreview) {
         <div class="relative h-full w-full">
           <img [src]="filePreview" class="h-full w-full rounded-md object-cover" alt="Preview Image" />
-          <!-- Delete Icon -->
           <button
             (click)="clearImage($event)"
             class="absolute right-2 top-2 z-10 rounded-full bg-white p-2 text-red-900 shadow hover:bg-gray-200"
@@ -64,7 +59,8 @@
       <input id="totalSpots" class="matchup-input" type="number" formControlName="totalSpots" placeholder="Available spots" />
     </div>
 
-    <div class="flex justify-end">
+    <div class="flex justify-end gap-4">
+      <button (click)="cancel()" class="matchup-button" type="button">Cancel</button>
       <button [disabled]="eventForm.invalid" class="matchup-button" type="submit">{{ isEditing ? "Update Event" : "Create Event" }}</button>
     </div>
   </form>
