--- a/src/app/pages/home/components/event-grid/components/event-card/event-card.component.html
+++ b/src/app/pages/home/components/event-grid/components/event-card/event-card.component.html
@@ -18,7 +18,7 @@
       </div>
       <div class="mb-2 flex items-center text-gray-600">
         <mat-icon class="mr-1.5 line-clamp-1 text-gray-400">groups</mat-icon>
-        {{ event.going }} going
+        {{ event.totalSpots }} spots
         <span class="mx-1.5">•</span>
         <mat-icon class="mr-1.5 line-clamp-1 text-gray-400">local_activity</mat-icon>
         {{ event.price === 0 ? "Free" : "$" + event.price }}
