--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -14,6 +14,17 @@
   </div>
   }
 
+  <div class="flex flex-col justify-end sm:flex-row sm:space-y-0">
+    <a
+      [routerLink]="['/', 'add']"
+      class="inline-flex items-center justify-center rounded-lg bg-blue-700 px-5 py-3 text-center text-base font-medium text-white hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
+      Create your event
+      <svg class="ms-2 h-3.5 w-3.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9" />
+      </svg>
+    </a>
+  </div>
+
   <div class="mt-8">
     <div class="flex space-x-4 border-b border-gray-200">
       <button [class.active-tab]="selectedTab === 'going'" (click)="selectedTab = 'going'" class="tab">Going Events</button>
