--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="flex flex-col gap-6">
   <app-banner></app-banner>
   <app-event-grid id="events"></app-event-grid>
+  <app-footer></app-footer>
 </div>
