small styling fixes

--- a/src/app/pages/event-view/event-view.component.html
+++ b/src/app/pages/event-view/event-view.component.html
@@ -60,10 +60,9 @@
 
         <!-- Copy Link Section -->
         <div class="flex items-center justify-between rounded-lg border border-gray-300 bg-gray-100 p-3">
-          copy
           <input
             #eventLink
-            [value]="'https://matchup.com/event/' + event?.id"
+            [value]="'https://matchup-d09b5.web.app/event/' + event?.id"
             class="flex-1 truncate bg-transparent text-sm text-gray-800 focus:outline-none"
             readonly />
           <button
